base/team-facturatie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facturatie-ingress
  namespace: shift-festival
spec:
  ingressClassName: nginx
  rules:
  - host: facturatie.desiderius.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: facturatie-app-service
            port:
              number: 80
